Nested <ul>s are mishandled when converted to <ol> using execCommand('insertorderedlist') https://bugs.webkit.org/show_bug.cgi?id=19539

Reviewed by Justin Garcia.

WebCore:

Fixes a bug where two consecutive lists are not merged if they have been converted
from ordered/unordered lists inside another list.

The bug was caused by InsertListCommand::doApply where it did not merge a newly inserted
list element and its neighbors. This patch adds code to doApply so that after inserting
the list element, it updates previousList and nextList to the outermost list elements around
insertionPos under the same enclosing list. Because the next and the previous list elements
are not necessarily visually next to the newly inserted element before moveParagraph moves
the paragraph into the new list element, doApply merges lists after moveParagraph is called.

Test: editing/execCommand/insert-lists-inside-another-list.html

* editing/InsertListCommand.cpp:
(WebCore::InsertListCommand::doApply): Modified as described above
* editing/htmlediting.cpp:
(WebCore::outermostEnclosingList): Added rootNode. Returns the outermost list element,
  which is a descendent of rootNode.
* editing/htmlediting.h:

LayoutTests:

Test to make sure InsertListCommand merges consecutive lists when converting
ordered/unordered lists to the opposite type of lists inside another list.

* editing/execCommand/insert-lists-inside-another-list-expected.txt: Added.
* editing/execCommand/insert-lists-inside-another-list.html: Added.
* editing/execCommand/script-tests/insert-lists-inside-another-list.js: Added.
(testList):
* platform/mac/editing/execCommand/create-list-from-range-selection-expected.txt:



Canonical link: https://commits.webkit.org/49235@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57954 268f45cc-cd09-0410-ab3c-d52691b4dbfc