WebCore/editing/htmlediting.h
@@ -195,7 +195,7 @@ PassRefPtr<HTMLElement> createHTMLElement(Document*, const QualifiedName&);
 PassRefPtr<HTMLElement> createHTMLElement(Document*, const AtomicString&);
 
 HTMLElement* enclosingList(Node*);
-HTMLElement* outermostEnclosingList(Node*);
+HTMLElement* outermostEnclosingList(Node*, Node* rootList = 0);
 HTMLElement* enclosingListChild(Node*);
 
 // -------------------------------------------------------------------------
